NetBSD Problem Report #51776

From www@NetBSD.org  Wed Jan  4 09:48:31 2017
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id AB4167A2AD
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  4 Jan 2017 09:48:31 +0000 (UTC)
Message-Id: <20170104094830.C24C17A334@mollari.NetBSD.org>
Date: Wed,  4 Jan 2017 09:48:30 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/raidframe/rf_reconmap.c:332]: (style) Variable 'numRUs' is modified but its new value is never used.
X-Send-Pr-Version: www-1.0

>Number:         51776
>Category:       kern
>Synopsis:       src/sys/dev/raidframe/rf_reconmap.c:332]: (style) Variable 'numRUs' is modified but its new value is never used.
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jan 04 09:50:00 +0000 2017
>Closed-Date:    Wed Jan 04 16:12:20 +0000 2017
>Last-Modified:  Wed Jan 04 16:12:20 +0000 2017
>Originator:     David Binderman
>Release:        cvs-20161231
>Organization:
>Environment:
>Description:

$ fgrep numRUs src/sys/dev/raidframe/rf_reconmap.c
	RF_ReconUnitCount_t numRUs;
	numRUs = mapPtr->sectorsInDisk / mapPtr->sectorsPerReconUnit;
		numRUs++;
$

Suggest either use the local variable or delete it.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51776 CVS commit: src/sys/dev/raidframe
Date: Wed, 4 Jan 2017 10:51:41 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Jan  4 15:51:41 UTC 2017

 Modified Files:
 	src/sys/dev/raidframe: rf_reconmap.c

 Log Message:
 PR/51776: David Binderman: Remove unused variable.


 To generate a diff of this commit:
 cvs rdiff -u -r1.34 -r1.35 src/sys/dev/raidframe/rf_reconmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 04 Jan 2017 16:12:20 +0000
State-Changed-Why:
Fixed by christos.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.