PR/51776: David Binderman: Remove unused variable.